projecthearthstone.in/AboutUs/style.css
@import url(../Common/styles.css);
@font-face {
    font-family: 'cooper-hewitt';
    font-style: normal;
    font-display: swap;
    font-weight: 400;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/cooper-hewitt@latest/latin-400-normal.woff2)
         format('woff2'),
         url(https://cdn.jsdelivr.net/fontsource/fonts/cooper-hewitt@latest/latin-400-normal.woff)
         format('woff'); /* Link: https://fontsource.org/fonts/cooper-hewitt/cdn */
}

body {
    font-family: 'cooper-hewitt';
    background-color: var(--bg-color);
    color: var(--text-color);
    padding: 0px 0px;
    margin: 0px 0px;
}

button {
    font-family: 'cooper-hewitt';
    background-color: var(--sec-bg);
    color: var(--text-color);
    border: none;
    cursor: pointer;
}

/* Navigation Bar */
nav {
    border-radius: 10px ;
    min-height: 10vh;
}

/* Hero Section */
.hero-image-container {
    width: 100%;
    height: 90vh;
    overflow: hidden;
}

.hero-image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Divider */
.divider-box {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 20px 0px;
}

.divider-line {
    height: 5px;         
    background-color: var(--accent-color);
    width: 90%;
    border-radius: 5px;
}

/* Sections */
.section {
    padding: 0px 3vw;
}

/* About Us Section */
#about-us h1 {
    margin: 0;
}

#vertical-columns {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

#vertical-columns {
    display: flex;
    align-items: flex-start; 
    gap: 40px;
}

#about-us-text {
    flex: 1;
}

#about-us-image img {
    height: 70vh;  
    width: auto;   
    display: block;
}

/* FAQ Section */
#faq-list {
    list-style-type: none;
    padding: 0;
}

#faq-list li {
    background-color: none;
    border-radius: 20px;
    margin-bottom: 20px;
    align-items: center;
}

#faq-list li button {
    padding: 10px 20px;
    border-radius: 20px;
    font-size: 20px;
    width: 100%;
    text-align: left;
    transition: background-color 0.5s ease;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
    position: relative;
}

#faq-list li button:hover {
    background-color: var(--sec-accent-color);
    color: black;
}

#faq-list li button:hover .arrow-icon {
    filter: invert(0);
}

.arrow-icon {
    width: 20px;
    height: 20px;
    filter: invert(1);
    transition: width 0.5s ease;
    transition: height 0.5s ease;
    transition: transform 0.5s ease;
}

.arrow-icon.active {
    transform: rotate(180deg);
}

.faq-answer {
    background-color: var(--text-bg);
    border-radius: 0px 0px 20px 20px;
    margin-top: -10px;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.5s ease;
    z-index: -1;
    position: relative;
}

.faq-answer.active {
    max-height: 200px;
}

.faq-answer p {
    margin: 10px 20px;
    padding: 10px 0px 0px 0px;
}

